Update Dockerfile in an attempt to get multistage build working on dockerhub